force-app/main/default/objects/PMTarget__c/PMTarget__c.object-meta.xml
<CustomObject>
    <label>PM Target</label>
    <nameField>
        <displayFormat>Target - {00000}</displayFormat>
        <label>PM Target No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>