force-app/main/default/objects/PMTarget__c/fields/PMTar_CommPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_CommPercent__c</fullName>
    <formula>IF(PMTar_CommTarget__c!=0, (PMTar_CommActual__c / PMTar_CommTarget__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commodity Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>