force-app/main/default/objects/PMTarget__c/fields/PMTar_CommTarget__c.field-meta.xml
<CustomField>
    <fullName>PMTar_CommTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commodity Target</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>