force-app/main/default/objects/PMTarget__c/fields/PMTar_CRMPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_CRMPercent__c</fullName>
    <formula>IF(PMTar_CRMTarget__c!=0, (PMTar_CRMActual__c / PMTar_CRMTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>