force-app/main/default/objects/PMTarget__c/fields/PMTar_CRMTargetTillDate__c.field-meta.xml
<CustomField>
    <fullName>PMTar_CRMTargetTillDate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CRM Target To Date</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>