force-app/main/default/objects/PMTarget__c/fields/PMTar_EndDate__c.field-meta.xml
<CustomField>
    <fullName>PMTar_EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>