force-app/main/default/objects/PMTarget__c/fields/PMTar_FXDirectPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_FXDirectPercent__c</fullName>
    <formula>IF(PMTar_FXDirectTarget__c!=0, (PMTar_FXDirectActual__c / PMTar_FXDirectTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Direct Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>