force-app/main/default/objects/PMTarget__c/fields/PMTar_FXIndirectPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_FXIndirectPercent__c</fullName>
    <formula>IF(  PMTar_FXIndirectTarget__c !=0, ( PMTar_FXIndirectActual__c / PMTar_FXIndirectTarget__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Indirect Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>