force-app/main/default/objects/PMTarget__c/fields/PMTar_FXRetailPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_FXRetailPercent__c</fullName>
    <formula>IF( PMTar_FXRetail__c !=0, ( PMTar_FXRetailActual__c / PMTar_FXRetail__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Retail Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>