force-app/main/default/objects/PMTarget__c/fields/PMTar_FYEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMTar_FYEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FY End Date</label>
    <type>Date</type>
</CustomField>