force-app/main/default/objects/PMTarget__c/fields/PMTar_FYStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMTar_FYStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FY Start Date</label>
    <type>Date</type>
</CustomField>