force-app/main/default/objects/PMTarget__c/fields/PMTar_IRRMPercent__c.field-meta.xml
<CustomField>
    <fullName>PMTar_IRRMPercent__c</fullName>
    <formula>IF(PMTar_IRRMTarget__c!=0, (PMTar_IRRMActual__c / PMTar_IRRMTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRRM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>