force-app/main/default/objects/PMTarget__c/fields/PMTar_IsCurrentFY__c.field-meta.xml
<CustomField>
    <fullName>PMTar_IsCurrentFY__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Current FY</label>
    <type>Checkbox</type>
</CustomField>