force-app/main/default/objects/PMTarget__c/fields/PMTar_IsFullTermPlan__c.field-meta.xml
<CustomField>
    <fullName>PMTar_IsFullTermPlan__c</fullName>
    <formula>IF((PMTar_StartDate__c == PMTar_FYStartDate__c &amp;&amp; 
PMTar_EndDate__c == PMTar_FYEndDate__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Full Term Plan</label>
    <type>Checkbox</type>
</CustomField>