force-app/main/default/objects/PMTarget__c/fields/PMTar_Location__c.field-meta.xml
<CustomField>
    <fullName>PMTar_Location__c</fullName>
    <formula>TEXT(PMTar_PMUser__r.Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Location</label>
    <type>Text</type>
</CustomField>