force-app/main/default/objects/PMTarget__c/fields/PMTar_LoggedInAsExecutive__c.field-meta.xml
<CustomField>
    <fullName>PMTar_LoggedInAsExecutive__c</fullName>
    <formula>IF( $User.Id =  PMTar_PMUser__r.ManagerId , True, False)</formula>
    <label>Logged In As Executive</label>
    <type>Checkbox</type>
</CustomField>