force-app/main/default/objects/PMTarget__c/fields/PMTar_LoggedInAsPM__c.field-meta.xml
<CustomField>
    <fullName>PMTar_LoggedInAsPM__c</fullName>
    <formula>IF( $User.Id  =  PMTar_PMUser__c , True, False)</formula>
    <label>Logged In As PM</label>
    <type>Checkbox</type>
</CustomField>