force-app/main/default/objects/PMTarget__c/fields/PMTar_PMContact__c.field-meta.xml
<CustomField>
    <fullName>PMTar_PMContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Manager (Contact)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product Manager Contact type should be internal and Contact status should be active</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PM Targets</relationshipLabel>
    <relationshipName>PMTargets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>