force-app/main/default/objects/PMTarget__c/fields/PMTar_PMUser__c.field-meta.xml
<CustomField>
    <fullName>PMTar_PMUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PMTargets</relationshipName>
    <type>Lookup</type>
</CustomField>