force-app/main/default/objects/PMTarget__c/fields/PMTar_Terminated__c.field-meta.xml
<CustomField>
    <fullName>PMTar_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>