force-app/main/default/objects/PMTarget__c/fields/PMTar_TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>PMTar_TerminationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>