force-app/main/default/objects/PMTarget__c/fields/PMTar_WorkingDays__c.field-meta.xml
<CustomField>
    <fullName>PMTar_WorkingDays__c</fullName>
    <label># Working Days To Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>