force-app/main/default/objects/PMTarget__c/validationRules/Plan_Start_and_Stop_Date_should_not_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Plan_Start_and_Stop_Date_should_not_Same</fullName>
    <active>true</active>
    <errorConditionFormula>PMTar_StartDate__c ==  PMTar_EndDate__c</errorConditionFormula>
    <errorMessage>Plan Start and Stop date should not be same .</errorMessage>
</ValidationRule>