force-app/main/default/objects/PMTarget__c/validationRules/PMTar_Cannot_select_status_as_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_Cannot_select_status_as_inactive</fullName>
    <active>true</active>
    <description>User should not able to select status as Inactive</description>
    <errorConditionFormula>NOT($Permission.UpdateTargetsWithClosedInactiveStatus ) &amp;&amp; (ISPICKVAL( PMTar_Status__c , &#39;Inactive&#39;) || ISPICKVAL( PMTar_Status__c , &#39;Ended&#39;)) &amp;&amp; (ISCHANGED(PMTar_Status__c) ||  ISNEW() )</errorConditionFormula>
    <errorDisplayField>PMTar_Status__c</errorDisplayField>
    <errorMessage>Please select the Status as Active/Terminated. Plan will be deactivated at the end of current FY.</errorMessage>
</ValidationRule>