force-app/main/default/objects/PMTarget__c/validationRules/PMTar_END_Date_must_chang_on_closure.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_END_Date_must_chang_on_closure</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( PMTar_Status__c ) &amp;&amp; TEXT(PMTar_Status__c) = &#39;Closed&#39; &amp;&amp; NOT(ISCHANGED( PMTar_EndDate__c ))</errorConditionFormula>
    <errorDisplayField>PMTar_EndDate__c</errorDisplayField>
    <errorMessage>Please update the end date of the plan.</errorMessage>
</ValidationRule>