force-app/main/default/objects/PMTarget__c/validationRules/PMTar_End_Date_Should_be_in_Current_FY.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_End_Date_Should_be_in_Current_FY</fullName>
    <active>true</active>
    <errorConditionFormula>PMTar_EndDate__c &lt; PMTar_FYStartDate__c || PMTar_EndDate__c &gt; PMTar_FYEndDate__c</errorConditionFormula>
    <errorDisplayField>PMTar_EndDate__c</errorDisplayField>
    <errorMessage>End Date is not in the current FY.</errorMessage>
</ValidationRule>