force-app/main/default/objects/PMTarget__c/validationRules/PMTar_EndDate_Before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_EndDate_Before_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF(PMTar_EndDate__c &lt; PMTar_StartDate__c , True, False)</errorConditionFormula>
    <errorDisplayField>PMTar_EndDate__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>