force-app/main/default/objects/PMTarget__c/validationRules/PMTar_Location_is_Mandatory_on_PM_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_Location_is_Mandatory_on_PM_Target</fullName>
    <active>true</active>
    <description>Location is mandatory on PM User&#39;s Record</description>
    <errorConditionFormula>ISBLANK(PMTar_Location__c)</errorConditionFormula>
    <errorMessage>Location is mandatory on PM User&#39;s Record</errorMessage>
</ValidationRule>