force-app/main/default/objects/PMTarget__c/validationRules/PMTar_Lockdown_PMContact_On_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_Lockdown_PMContact_On_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(), ISCHANGED(PMTar_PMContact__c))</errorConditionFormula>
    <errorDisplayField>PMTar_PMContact__c</errorDisplayField>
    <errorMessage>If PM Contact needs to be changed, plan should be closed and re-opened for new PM Contact</errorMessage>
</ValidationRule>