force-app/main/default/objects/PMTarget__c/validationRules/PMTar_Lockdown_PMUser_On_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_Lockdown_PMUser_On_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(), ISCHANGED(PMTar_PMUser__c))</errorConditionFormula>
    <errorDisplayField>PMTar_PMUser__c</errorDisplayField>
    <errorMessage>If PM User needs to be changed, plan should be closed and re-opened for new PM User</errorMessage>
</ValidationRule>