force-app/main/default/objects/PMTarget__c/validationRules/PMTar_Start_Date_Should_be_in_Current_FY.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_Start_Date_Should_be_in_Current_FY</fullName>
    <active>true</active>
    <errorConditionFormula>PMTar_StartDate__c &lt; PMTar_FYStartDate__c || PMTar_StartDate__c &gt; PMTar_FYEndDate__c</errorConditionFormula>
    <errorDisplayField>PMTar_StartDate__c</errorDisplayField>
    <errorMessage>Start Date is not in the current FY.</errorMessage>
</ValidationRule>