force-app/main/default/objects/PMTarget__c/validationRules/PMTar_TerDate_must_within_plan_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_TerDate_must_within_plan_dates</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR((PMTar_TerminationDate__c &lt; PMTar_StartDate__c),
(PMTar_TerminationDate__c &gt; PMTar_EndDate__c)), True, False)</errorConditionFormula>
    <errorDisplayField>PMTar_TerminationDate__c</errorDisplayField>
    <errorMessage>Termination Date should be in between the Plan Start Date and the Plan End Date.</errorMessage>
</ValidationRule>