force-app/main/default/objects/PMTarget__c/validationRules/PMTar_TerminatedStatus_For_TerDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PMTar_TerminatedStatus_For_TerDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(PMTar_TerminationDate__c)  &amp;&amp; (!ISBLANK(PMTar_TerminationDate__c) &amp;&amp; 
!ISPICKVAL(PMTar_Status__c, &#39;Terminated&#39;))</errorConditionFormula>
    <errorDisplayField>PMTar_Status__c</errorDisplayField>
    <errorMessage>Please Select the Status as Terminated for Termination Date is provided</errorMessage>
</ValidationRule>