force-app/main/default/objects/PMTarget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMTar_PMContact__c</columns>
    <columns>PMTar_PMUser__c</columns>
    <columns>PMTar_FXDirectTarget__c</columns>
    <columns>PMTar_FXDirectActual__c</columns>
    <columns>PMTar_FXIndirectTarget__c</columns>
    <columns>PMTar_FXIndirectActual__c</columns>
    <columns>PMTar_FXRetail__c</columns>
    <columns>PMTar_FXRetailActual__c</columns>
    <columns>PMTar_CommTarget__c</columns>
    <columns>PMTar_CommActual__c</columns>
    <columns>PMTar_IRRMTarget__c</columns>
    <columns>PMTar_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>