force-app/main/default/objects/PMTarget__c/listViews/Current_FY.listView-meta.xml
<ListView>
    <fullName>Current_FY</fullName>
    <columns>NAME</columns>
    <columns>PMTar_PMContact__c</columns>
    <columns>PMTar_CommActual__c</columns>
    <columns>PMTar_CommTarget__c</columns>
    <columns>PMTar_CRMActual__c</columns>
    <columns>PMTar_CRMTarget__c</columns>
    <columns>PMTar_FXDirectActual__c</columns>
    <columns>PMTar_FXDirectTarget__c</columns>
    <columns>PMTar_FXIndirectActual__c</columns>
    <columns>PMTar_FXIndirectTarget__c</columns>
    <columns>PMTar_FXRetailActual__c</columns>
    <columns>PMTar_FXRetail__c</columns>
    <columns>PMTar_IRRMActual__c</columns>
    <columns>PMTar_IRRMTarget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMTar_FiscalYear__c</field>
        <operation>equals</operation>
        <value>FY20</value>
    </filters>
    <filters>
        <field>PMTar_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Current FY</label>
</ListView>