force-app/main/default/objects/PMTarget__c/listViews/FY19_PM_Plans.listView-meta.xml
<ListView>
    <fullName>FY19_PM_Plans</fullName>
    <columns>NAME</columns>
    <columns>PMTar_PMContact__c</columns>
    <columns>PMTar_PMUser__c</columns>
    <columns>PMTar_FXDirectTarget__c</columns>
    <columns>PMTar_FXDirectActual__c</columns>
    <columns>PMTar_FXIndirectTarget__c</columns>
    <columns>PMTar_FXIndirectActual__c</columns>
    <columns>PMTar_FXRetail__c</columns>
    <columns>PMTar_FXRetailActual__c</columns>
    <columns>PMTar_CommTarget__c</columns>
    <columns>PMTar_CommActual__c</columns>
    <columns>PMTar_IRRMTarget__c</columns>
    <columns>PMTar_IRRMActual__c</columns>
    <columns>PMTar_TotalWorkingDays__c</columns>
    <columns>PMTar_WorkingDays__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMTar_FiscalYear__c</field>
        <operation>equals</operation>
        <value>FY19</value>
    </filters>
    <filters>
        <field>PMTar_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>FY19 PM Plans</label>
</ListView>