force-app/main/default/objects/PMTarget__c/listViews/Short_Term_Plans.listView-meta.xml
<ListView>
    <fullName>Short_Term_Plans</fullName>
    <columns>NAME</columns>
    <columns>PMTar_PMContact__c</columns>
    <columns>PMTar_PMUser__c</columns>
    <columns>PMTar_FXDirectTarget__c</columns>
    <columns>PMTar_FXDirectActual__c</columns>
    <columns>PMTar_FXIndirectTarget__c</columns>
    <columns>PMTar_FXIndirectActual__c</columns>
    <columns>PMTar_FXRetail__c</columns>
    <columns>PMTar_FXRetailActual__c</columns>
    <columns>PMTar_CommTarget__c</columns>
    <columns>PMTar_CommActual__c</columns>
    <columns>PMTar_IRRMTarget__c</columns>
    <columns>PMTar_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMTar_IsCurrentFY__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PMTar_IsFullTermPlan__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Short Term Plans</label>
</ListView>