force-app/main/default/objects/PMTarget__c/listViews/Terminated_Plans.listView-meta.xml
<ListView>
    <fullName>Terminated_Plans</fullName>
    <columns>NAME</columns>
    <columns>PMTar_PMContact__c</columns>
    <columns>PMTar_PMUser__c</columns>
    <columns>PMTar_FXDirectTarget__c</columns>
    <columns>PMTar_FXDirectActual__c</columns>
    <columns>PMTar_FXIndirectTarget__c</columns>
    <columns>PMTar_FXIndirectActual__c</columns>
    <columns>PMTar_FXRetail__c</columns>
    <columns>PMTar_FXRetailActual__c</columns>
    <columns>PMTar_CommTarget__c</columns>
    <columns>PMTar_CommActual__c</columns>
    <columns>PMTar_IRRMTarget__c</columns>
    <columns>PMTar_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMTar_IsCurrentFY__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PMTar_Status__c</field>
        <operation>equals</operation>
        <value>Terminated</value>
    </filters>
    <filters>
        <field>PMTar_TerminationDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Terminated Plans</label>
</ListView>